# flow_stock

./: Dockerfile  README.md  deploy.py  flow.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: prefect-CICD.yaml  test-prefect-CICD.yaml
src/: logger.py  logic.py
tests/: conftest.py  test_import.py  test_logic.py
